examples/base/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-ui
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: ui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: ui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
