examples/base/route-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myapp-ui
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/component: ui
spec:
  host: myapp.apps.example.com
  to:
    kind: Service
    name: myapp-ui
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
